# simple-http-parser

./: Cargo.toml
proptest-regressions/request_line/: target.txt
src/: constants.rs  lib.rs  request_method.rs  utils.rs
src/request/: mod.rs  request_line.rs
src/request_line/: error.rs  method.rs  mod.rs  target.rs
src/syn/: mod.rs
src/syn/request_line/: mod.rs  target.rs  verb.rs
